--- a/nodejs/part1/package.json
+++ b/nodejs/part1/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "mongodb": "^5.9.2"
+    "mongodb": "^5.9.2",
+    "nodemon": "^3.0.2"
   }
 }
