--- a/nodejs/crawling/package.json
+++ b/nodejs/crawling/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.2",
     "cheerio": "^1.0.0-rc.12",
     "csv-parse": "^4.16.3",
+    "puppeteer": "^21.6.1",
     "xlsx": "^0.18.5"
   }
 }
