--- a/next/zustand/package.json
+++ b/next/zustand/package.json
@@ -19,6 +19,7 @@
     "*.ts": "yarn lint"
   },
   "dependencies": {
+    "immer": "^10.1.1",
     "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18",
