--- a/next/zustand/.eslintrc.json
+++ b/next/zustand/.eslintrc.json
@@ -35,7 +35,8 @@
     "react/jsx-key": "warn",            // 반복문으로 생성하는 JSX 요소에 key 설정 경고
     "react/jsx-pascal-case": "warn",    // 컴포넌트 이름은 PascalCase 경고
     "@typescript-eslint/no-unused-vars": "warn", // 사용되지 않는 변수 경고
-    "prettier/prettier": ["error", { "endOfLine": "auto" }] // Prettier의 줄바꿈 규칙 설정
+    "prettier/prettier": ["error", { "endOfLine": "auto" }], // Prettier의 줄바꿈 규칙 설정
+    "@typescript-eslint/no-explicit-any": "off" // any 타입 오류 무시
   },
   "ignorePatterns": ["public", ".next"] // 린트에서 제외할 폴더
 }
